chore: do things